clusters/talos-cluster/rabbitmq-clusters/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-small-lb
  namespace: rabbitmq-clusters
  annotations:
    external-dns.alpha.kubernetes.io/hostname: rmq.horus
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: rabbitmq-small
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
      protocol: TCP
