clusters/talos-cluster/rabbitmq-clusters/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rabbitmq-route
  namespace: rabbitmq-clusters
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "rmq.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rabbitmq-small
          port: 15672
